# RatpacExperiment

./: .gitignore  CMakeLists.txt  Makefile  readme.md  rename.sh
config/: Config.hh.in  slartibartfast.sh.in
src/: CMakeLists.txt  Slartibartfast.cc  slartibartfast.cc  slartibartfast.cpp
src/include/: Slartibartfast.hh
